# tp1-s.op

./: .gitignore  CMakeList.txt  CMakeLists.txt  main  tillo- terminado
.github/actions/building/: action.yml
.github/actions/documentation/: action.yml
.github/workflows/: QAWorkflow.yml  c-cpp.yml  c3-cpp.yml
include/: config.h  expose_metrics.h  metrics.h
src/: expose_metrics.c  http_test  http_test.c  main.c  metrics.c
